--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,7 +5,7 @@
         <button type="submit" (click)= getUser()>Search</button>
 </form>
 </div>
-    <div>
+    <div *ngIf = 'users'>
         <p >{{user.login}}</p>
         <p >{{user.followers}}</p>
         <p >{{user.following}}</p>
