--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -5,6 +5,10 @@ h1 {
     font-size: 100px;
     text-align: center;
 }
+h2{
+    text-align: center;
+    font-size: 50px;
+}
 h3{
     font-size: 60px;
     font-family: 'Pangolin', cursive;
