--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Freckle+Face|Graduate|Pangolin|Press+Start+2P|Secular+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono|IM+Fell+English|Laila|Noto+Sans+TC|Source+Code+Pro|Vesper+Libre&display=swap');
 h1 {
     font-family: 'Bungee Inline', cursive;
     font-size: 100px;
@@ -7,7 +7,8 @@ h1 {
 }
 h2{
     text-align: center;
-    font-size: 50px;
+    font-size: 80px;
+    font-family: 'Pangolin', cursive;
 }
 h3{
     font-size: 60px;
@@ -25,4 +26,37 @@ h4{
 .img-circle {
     margin-left: 30px;
     margin-top: 50px;
+}
+.search{
+   width: 250px;
+   text-align: center;
+   margin-left: 100px;
+   margin-bottom: 100px;
+   margin-top: 30px;
+
+}
+#username{
+    text-align: center;
+    margin-top: 30px;
+  margin-left: 100px;
+  width: 1000px;
+}
+.container {
+    text-align: center;
+    margin-right: 30px;
+}
+.Github{
+    margin-top: 30px;
+    margin-left: 150px;
+    width: 350px;
+    color: black;
+    font-family: 'Pangolin', cursive;
+}
+.card-body{
+    font-family: 'Laila', serif;
+    font-size: 20px;
+}
+h6{
+    font-family: 'IM Fell English', serif;
+    font-size: 40px;
 }
