--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,30 +1,35 @@
 <h1><span class="badge badge-primary">Github Searcher</span> </h1>
+<div class="container">
 <form   #searchForm='ngForm' >
         <label for="username"></label>
-        <input class="form-control form-control-lg col-md-8" type="text" placeholder="Username" type="text" id='username' name='username' [(ngModel)]='username'>    
+        <input class="form-control form-control-lg col-md-8" type="text" placeholder="Enter username/repository" type="text" id='username' name='username' [(ngModel)]='username'>    
 </form>
-<button type="submit" class="btn btn-outline-secondary btn-lg" (click)= getRepo()>Repository</button>
-<button type="submit" class="btn btn-outline-secondary btn-lg" (click)= getUser()>Username</button>
 
-
-
+<div class="row">
+    <div class="col-sm-3">
+<button type="submit" class=" search btn btn-secondary btn-lg btn-block" (click)= getRepo()>Search repo</button> 
+</div>
+<div class="col-sm-2">
+<button type="submit" class="search btn btn-secondary btn-lg btn-block" (click)= getUser()>Search name</button>
+</div>
+</div>
 
 <div *ngIf = 'user'>
-    <div class="row">
+    <div class="row Users">
         <div class= "col-md-4">
      <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
     </div>
      <div class ="col-md-6">
+         <h4>{{user.date}}</h4>
         <h4> name:  {{user.login}}</h4> 
             <h4>followers:  {{user.followers}}</h4> 
                 <h4>following:  {{user.following}}</h4> 
                     <h4>public repos:  {{user.public_repos}}</h4> 
-                  <button> <a href="{{user.html_url}}"> Go to Github</a></button> 
+                  <button type="button" class="btn btn-outline-dark  btn-lg btn-block"> <a href="{{user.html_url}}"> Go to Github</a></button> 
                   <p *ngFor = 'let searchRepo of searchRepos'> {{searchRepo.name}}</p>
         </div>
     </div>
 </div>
-
 
 <div class="card">
     <div>
@@ -38,8 +43,8 @@
       <h3 class="card-title"> {{profile.login}} </h3>
       <h3 class="card-text"> followers: {{profile.followers}}  </h3>
       <h3 class="card-text">following: {{profile.following}} </h3>
-      <h3 class="card-text">public Repositories:{{profile.public_repos}}</h3>
-      <button> <a href="{{profile.html_url}}"> Go to Github</a></button> 
+      <h3 class="card-text">Repositories:  {{profile.public_repos}}</h3>
+      <button type="button" class="btn btn-info btn-lg btn-block Github"><a href="{{profile.html_url}}"> Go to Github</a></button> 
     </div>
   </div>
 </div>
@@ -48,6 +53,7 @@
 <div class="card-body">
 <h2 class="card-title"> Repositories</h2>
 <div *ngFor ='let repo of repos'>
-    <p>  {{repo.name}} {{repo.description}}</p>
+    <h6>  {{repo.name}} </h6> 
+    <p>{{repo.description}}</p>
 </div>
 </div>
