--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,7 +20,7 @@
      <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
     </div>
      <div class ="col-md-6">
-         <h4>{{user.date}}</h4>
+         <h4 appHighlight >{{user.date}}</h4>
         <h4> name:  {{user.login}}</h4> 
             <h4>followers:  {{user.followers}}</h4> 
                 <h4>following:  {{user.following}}</h4> 
