--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,59 +1,70 @@
 <h1><span class="badge badge-primary">Github Searcher</span> </h1>
 <div class="container">
-<form   #searchForm='ngForm' >
+    <form   #searchForm='ngForm' >
         <label for="username"></label>
-        <input class="form-control form-control-lg col-md-8" type="text" placeholder="Enter username/repository" type="text" id='username' name='username' [(ngModel)]='username'>    
-</form>
+        <input class="form-control form-control-lg col-md-8" type="text" placeholder="Enter username" type="text" id='username' name='username' [(ngModel)]='username'>    
+        <label for="repository"></label>
+        <input class="form-control form-control-lg col-md-8" type="text" placeholder="Enter repository" type="text" id='repoName' name='repoName' [(ngModel)]='repoName'>    
+    </form>
 
 <div class="row">
     <div class="col-sm-3">
-<button type="submit" class=" search btn btn-secondary btn-lg btn-block" (click)= getRepo()>Search repo</button> 
-</div>
-<div class="col-sm-2">
-<button type="submit" class="search btn btn-secondary btn-lg btn-block" (click)= getUser()>Search name</button>
-</div>
+        <button type="submit" class=" search btn btn-secondary btn-lg btn-block" (click)= getRepo()>Search repo</button> 
+    </div>
+    <div class="col-sm-2">
+        <button type="submit" class="search btn btn-secondary btn-lg btn-block" (click)= getUser()>Search name</button>
+    </div>
 </div>
 
 <div *ngIf = 'user'>
     <div class="row Users">
-        <div class= "col-md-4">
-     <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
-    </div>
-     <div class ="col-md-6">
-         <h4 appHighlight >{{user.date}}</h4>
-        <h4> name:  {{user.login}}</h4> 
+        <div class= "col-md-3">
+            <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
+        </div>
+        <div class ="col-md-8">
+            <h4> name:  {{user.login}}</h4> 
+             <h4 appHighlight >{{user.date | date}}</h4>
             <h4>followers:  {{user.followers}}</h4> 
-                <h4>following:  {{user.following}}</h4> 
-                    <h4>public repos:  {{user.public_repos}}</h4> 
-                  <button type="button" class="btn btn-outline-dark  btn-lg btn-block"> <a href="{{user.html_url}}"> Go to Github</a></button> 
-                  <p *ngFor = 'let searchRepo of searchRepos'> {{searchRepo.name}}</p>
+            <h4>following:  {{user.following}}</h4> 
+            <h4>public repos:  {{user.public_repos}}</h4> 
+            <button type="button" class="btn btn-outline-dark  btn-lg btn-block"> <a href="{{user.html_url}}"> Go to Github</a></button>
+         </div>
+    </div>
+</div>
+                  
+<div *ngIf='searchRepo'>
+    <div class="row Repos">
+        <div class ="col-md-6">
+            <div *ngFor = 'let searchRepo of searchRepos'> 
+                <h4>{{searchRepo.name}</h4>
+                <h4 appHighlight> name:  {{searchRepo.description}}</h4> 
+            </div>
         </div>
     </div>
 </div>
 
+
 <div class="card">
-    <div>
-    <img src="" class="card-img-top" alt="">
     <div class="card-body">
-      <div class="row">
-        <div class="col-md-4">
-      <img src="{{profile.avatar_url}}" class="img-circle" img="responsive" alt="profileImg" width="400px" height="400px">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="{{profile.avatar_url}}" class="img-circle" img="responsive" alt="profileImg" width="400px" height="400px">
+             </div>
+        <div class="col-md-6">
+            <h3 class="card-title"> {{profile.login}} </h3>
+            <h3 class="card-text"> followers: {{profile.followers}}  </h3>
+            <h3 class="card-text">following: {{profile.following}} </h3>
+            <h3 class="card-text">Repositories:  {{profile.public_repos}}</h3>
+            <button type="button" class="btn btn-info btn-lg btn-block Github"><a href="{{profile.html_url}}"> Go to Github</a></button> 
+        </div>
     </div>
-    <div class="col-md-6">
-      <h3 class="card-title"> {{profile.login}} </h3>
-      <h3 class="card-text"> followers: {{profile.followers}}  </h3>
-      <h3 class="card-text">following: {{profile.following}} </h3>
-      <h3 class="card-text">Repositories:  {{profile.public_repos}}</h3>
-      <button type="button" class="btn btn-info btn-lg btn-block Github"><a href="{{profile.html_url}}"> Go to Github</a></button> 
     </div>
-  </div>
-</div>
 </div>
 
 <div class="card-body">
-<h2 class="card-title"> Repositories</h2>
-<div *ngFor ='let repo of repos'>
-    <h6>  {{repo.name}} </h6> 
-    <p>{{repo.description}}</p>
+        <h2 class="card-title"> brenda - wanjiku Repos</h2>
+    <div *ngFor ='let repo of repos'>
+        <h6>  {{repo.name}} </h6> 
+    </div>
 </div>
 </div>
