--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,11 +22,11 @@
             <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
         </div>
         <div class ="col-md-8">
-            <h4> name:  {{user.login}}</h4> 
+            <h4 appHighlight> name:  {{user.login}}</h4> 
              <h4 appHighlight >{{user.date | date}}</h4>
-            <h4>followers:  {{user.followers}}</h4> 
-            <h4>following:  {{user.following}}</h4> 
-            <h4>public repos:  {{user.public_repos}}</h4> 
+            <h4 appHighlight>followers:  {{user.followers}}</h4> 
+            <h4 appHighlight>following:  {{user.following}}</h4> 
+            <h4 appHighlight>public repos:  {{user.public_repos}}</h4> 
             <button type="button" class="btn btn-outline-dark  btn-lg btn-block"> <a href="{{user.html_url}}"> Go to Github</a></button>
          </div>
     </div>
@@ -51,6 +51,7 @@
                 <img src="{{profile.avatar_url}}" class="img-circle" img="responsive" alt="profileImg" width="400px" height="400px">
              </div>
         <div class="col-md-6">
+            <h3 class="card-title"> {{profile.date | date}} </h3>
             <h3 class="card-title"> {{profile.login}} </h3>
             <h3 class="card-text"> followers: {{profile.followers}}  </h3>
             <h3 class="card-text">following: {{profile.following}} </h3>
