--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -21,12 +21,13 @@
         <div class= "col-md-3">
             <img src="{{user.avatar_url}}" class="img-circle" img="responsive" alt="profileImg">
         </div>
-        <div class ="col-md-8">
-            <h4 appHighlight> name:  {{user.login}}</h4> 
-             <h4 appHighlight >{{user.date | date}}</h4>
-            <h4 appHighlight>followers:  {{user.followers}}</h4> 
-            <h4 appHighlight>following:  {{user.following}}</h4> 
-            <h4 appHighlight>public repos:  {{user.public_repos}}</h4> 
+        <div class ="col-md-6">
+
+            <h4> name:  {{user.login}}</h4> 
+             <h4>{{user.date}}</h4>
+            <h4>followers:{{user.followers}}</h4> 
+            <h4>following:{{user.following}}</h4> 
+            <h4>public repos:{{user.public_repos}}</h4> 
             <button type="button" class="btn btn-outline-dark  btn-lg btn-block"> <a href="{{user.html_url}}"> Go to Github</a></button>
          </div>
     </div>
@@ -37,7 +38,7 @@
         <div class ="col-md-6">
             <div *ngFor = 'let searchRepo of searchRepos'> 
                 <h4>{{searchRepo.name}</h4>
-                <h4 appHighlight> name:  {{searchRepo.description}}</h4> 
+                <h4> name:  {{searchRepo.description}}</h4> 
             </div>
         </div>
     </div>
@@ -51,11 +52,11 @@
                 <img src="{{profile.avatar_url}}" class="img-circle" img="responsive" alt="profileImg" width="400px" height="400px">
              </div>
         <div class="col-md-6">
-            <h3 class="card-title"> {{profile.date | date}} </h3>
             <h3 class="card-title"> {{profile.login}} </h3>
             <h3 class="card-text"> followers: {{profile.followers}}  </h3>
             <h3 class="card-text">following: {{profile.following}} </h3>
             <h3 class="card-text">Repositories:  {{profile.public_repos}}</h3>
+            <h3> Created {{profile.date|date}} days ago</h3> 
             <button type="button" class="btn btn-info btn-lg btn-block Github"><a href="{{profile.html_url}}"> Go to Github</a></button> 
         </div>
     </div>
@@ -63,9 +64,9 @@
 </div>
 
 <div class="card-body">
-        <h2 class="card-title"> brenda - wanjiku Repos</h2>
+        <h2 class="card-title" appGithub> brenda - wanjiku Repos</h2>
     <div *ngFor ='let repo of repos'>
-        <h6>  {{repo.name}} </h6> 
+        <h6 appGithub>  {{repo.name}} </h6> 
     </div>
 </div>
 </div>
