--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -30,13 +30,13 @@
                   
 <div>
     <div class="row Repos">
-        <div class ="col-md-6">
             <div *ngFor = 'let searchRepo of searchRepos'> 
-                <h4> name: {{searchRepo.name}}</h4>
-                <h4> description: {{searchRepo.description}}</h4> 
+                <h4> REPO: {{searchRepo.name}} </h4>
+                    <h4>DETAILS: {{searchRepo.description}}</h4> 
+                    
+
             </div>
         </div>
-    </div>
 </div>
 
 
